--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,59 +1,26 @@
+# Use the latest 2.1 version of CircleCI pipeline process engine.
+# See: https://circleci.com/docs/2.0/configuration-reference
 version: 2.1
 
+# Define a job to be invoked later in a workflow.
+# See: https://circleci.com/docs/2.0/configuration-reference/#jobs
 jobs:
-  build_and_test:
+  say-hello:
+    # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
+    # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: openjdk:8-jdk-alpine
+      - image: cimg/base:stable
+    # Add steps to the job
+    # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
       - checkout
-      - run: ./gradlew build
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - build/libs/ci-cd-demo-0.0.1-SNAPSHOT.jar
-            - Dockerfile
-      - store_test_results:
-          path: build/test-results
-
-  package:
-    docker:
-      - image: docker:dind
-    steps:
-      - setup_remote_docker:
-          version: 19.03.13
-      - attach_workspace:
-          at: ./
-      - run: docker build --iidfile image.txt -t registry.heroku.com/$HEROKU_APP_NAME/web:${CIRCLE_SHA1} .
-      - run: docker login --username=_ --password=$HEROKU_TOKEN registry.heroku.com
-      - run: docker push registry.heroku.com/$HEROKU_APP_NAME/web:${CIRCLE_SHA1}
-      - persist_to_workspace:
-          root: ./
-          paths:
-            - image.txt
-
-  deploy:
-    docker:
-      - image: docker:dind
-    steps:
-      - setup_remote_docker:
-          version: 19.03.13
-      - attach_workspace:
-          at: ./
-      - run: apk add --no-cache curl
       - run:
-          name: "Patch the container hosted in heroku"
-          command: |
-            curl -X PATCH https://api.heroku.com/apps/$HEROKU_APP_NAME/formation --header "Content-Type: application/json" --header "Accept: application/vnd.heroku+json; version=3.docker-releases" --header "Authorization: Bearer ${HEROKU_TOKEN}" --data '{ "updates": [ { "type": "web", "docker_image": "'$(cat image.txt)'" } ] }'
+          name: "Say hello"
+          command: "echo Hello, World!"
 
-
+# Invoke jobs via workflows
+# See: https://circleci.com/docs/2.0/configuration-reference/#workflows
 workflows:
-  version: 2
-  spring_boot_cicd_workflow:
+  say-hello-workflow:
     jobs:
-      - build_and_test
-      - package:
-          requires:
-            - build_and_test
-      - deploy:
-          requires:
-            - package
+      - say-hello
